--- a/screen.css
+++ b/screen.css
@@ -1,4 +1,49 @@
-/* Add screen styles below */
-a.active {
-    font-weight: bold;
+body {
+    margin: 0;
+    padding: 0;
+    font-family: Arial, sans-serif;
+    background-color: #252424; 
+    color: #ffffff; 
 }
+
+h1 {
+    color: #ffffff; 
+    font-size: 2rem;
+    font-weight: bold;
+    margin-bottom: 20px;
+}
+
+p {
+    color: #ffffff;
+    font-size: 1rem; 
+    line-height: 2;
+    margin-bottom: 28px; 
+}
+
+.container {
+    padding: 20px;
+}
+
+.planet-container {
+    display: flex;
+    align-items: center;
+    margin-top: 28px;
+    justify-content: space-around;
+}
+
+.earth, .moon {
+    height: 200px;
+    width: 200px;  
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+    border: none; 
+    outline: none;
+}
+
+.earth img, .moon img {
+    width: 100%;
+    height: 100%;
+}
+
